fixed alignment; polished ui

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,11 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -42,14 +42,22 @@ a:hover {
   color: #ff64ea;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
+/* body {
+  margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+} */
 /* h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -62,7 +70,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: primary;
+  /* background-color: primary; */
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -76,11 +84,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
    :root {
-    color: #213547;
+    color: #FF69B4;
     background-color: #b34ab3;
   } 
    a:hover {
-    color: #747bff;
+    color: #310062;
   } 
    button {
     background-color: #bb5aa3;
